fix: alignment in StackedSummaryTable

--- a/packages/uicore/src/components/StackedSummaryTable/StackedSummaryTable.css
+++ b/packages/uicore/src/components/StackedSummaryTable/StackedSummaryTable.css
@@ -15,7 +15,6 @@
 
   [role='row'] {
     border: none !important;
-    align-items: center;
   }
 
   :global {
